# step-change

client/: .env  package-lock.json  package.json  (+2 more)
server/: .gitignore  2.0.0  README.md  README_PORTS.md  llm_debug_patch.py  pyproject.toml  requirements.txt  run_backend.py  server.py  test.py  test_key.py  upload_to_s3.py
server/app/: dependencies.py  main.py
server/app/config/: bedrock_llm.py  dbConfig.py  llm_config.py  settings.py
server/app/models/: user_model.py
server/app/routers/: analysis.py  auth.py
server/app/services/: analysis_service.py  dependency_service.py  vector_store_service.py
server/app/utils/: angular_parser.py  dotnet_parser.py  file_utils.py  git_utils.py  llm_quality.py  llm_section_parser.py  logger.py  s3_utils.py
server/graphs/0390bc802c7e0f0354a22632955d23d6a5c2aebab25716c4659ba77b1531c60f/: Entity_Relationship_Diagram.json  Requirement_Diagram.json
server/graphs/09df6a7d490cb38e38829fc02e701e87d1f85948d6e74f55a45fd9b455aba19f/: Entity_Relationship_Diagram.json  Requirement_Diagram.json
server/graphs/0c472fc2641921b1b6cfd628a689a13d69953ad56ed56a38f316f8e86ef5fab0/: Entity_Relationship_Diagram.json  Requirement_Diagram.json
server/graphs/1125ccd574bfff2387291616bf288bfaff036691fcbdffbefe40cf5dccbb05ce/: Entity_Relationship_Diagram.json  Requirement_Diagram.json
server/graphs/14fe30ab1acfc8b28cd8bdfa8e0a280de5b70bcc4b79dbbdf4911ce4ac9ebe41/: Entity_Relationship_Diagram.json  Requirement_Diagram.json
server/scripts/: cleanup_zero_embeddings.py
server/vector_store/: documents.pkl  index.faiss  metadata_index.pkl
(+130 files in other folders)
