[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "bcrypt>=4.3.0",
    "fastapi>=0.115.12",
    "llama-index>=0.12.33",
    "llama-index-embeddings-azure-openai>=0.3.2",
    "llama-index-llms-azure-openai>=0.3.2",
    "passlib>=1.7.4",
    "pydantic-settings>=2.9.1",
    "pymysql>=1.1.1",
    "uvicorn>=0.34.2",
]
